Initial release (Closes: #703962)

--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,18 @@ doc/version.texi
 png/
 src/logic_analyzer
 src/.deps
-debian/
+debian/logic-analyzer-rpi/
+debian/changelog.dch
 *.o
 *~
 *.log
 *.status
+debian/logic-analyzer-rpi.substvars
+debian/files
 src/Makefile
 doc/Makefile
 doc/Doxyfile
 doc/doxyfile.stamp
 Makefile
 autom4te.cache/
+
