--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,31 +1,40 @@
 if HAVE_DOXYGEN
-directory3 = $(top_srcdir)/doc/man/man3
-directory1 = $(top_srcdir)/doc/man/man1
 
-dist_man_MANS = $(directory3)/activity.3  $(directory3)/binary.3 $(directory3)/logic_input.3 $(directory3)/message.3 $(directory3)/microwire.3  $(directory3)/protocol.3 $(directory3)/raw.3 $(directory3)/transition.3  
+directory3= $(top_srcdir)/doc/man/man3
+directory1= $(top_srcdir)/doc/man/man1
+prefix3=logic_analyzer
 
-man_MANS=$(directory1)/logic_analyzer.1
+doxyman3=activity.3 binary.3 logic_input.3 message.3 microwire.3 protocol.3 raw.3 transition.3 
 
-$(directory3)/activity.3 : doxyfile.stamp
 
-$(directory3)/binary.3: doxyfile.stamp
+dist_man_MANS = $(directory3)/$(prefix3)_activity.3  $(directory3)/$(prefix3)_binary.3 $(directory3)/$(prefix3)_logic_input.3 $(directory3)/$(prefix3)_message.3 $(directory3)/$(prefix3)_microwire.3  $(directory3)/$(prefix3)_protocol.3 $(directory3)/$(prefix3)_raw.3 $(directory3)/$(prefix3)_transition.3 
 
-$(directory3)/logic_input.3: doxyfile.stamp
+man_MANS=$(directory1)/$(prefix3).1
 
-$(directory3)/message.3: doxyfile.stamp
+$(directory3)/$(prefix3)_activity.3 : doxyfile.stamp
 
-$(directory3)/microwire.3 : doxyfile.stamp
+$(directory3)/$(prefix3)_binary.3: doxyfile.stamp
 
-$(directory3)/protocol.3: doxyfile.stamp
+$(directory3)/$(prefix3)_logic_input.3: doxyfile.stamp
 
-$(directory3)/raw.3: doxyfile.stamp
+$(directory3)/$(prefix3)_message.3: doxyfile.stamp
 
-$(directory3)/transition.3: doxyfile.stamp
+$(directory3)/$(prefix3)_microwire.3 : doxyfile.stamp
+
+$(directory3)/$(prefix3)_protocol.3: doxyfile.stamp
+
+$(directory3)/$(prefix3)_raw.3: doxyfile.stamp
+
+$(directory3)/$(prefix3)_transition.3: doxyfile.stamp
 
 doxyfile.stamp: 
 	$(DOXYGEN) Doxyfile
 	echo Timestamp> doxyfile.stamp
+	for file3 in $(doxyman3); do \
+		mv $(directory3)/$$file3 $(directory3)/$(prefix3)_$$file3; \
+	done
 
+	
 CLEANFILES = doxyfile.stamp Doxyfile
 
 all-local: doxyfile.stamp
