--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -204,13 +204,11 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-directory3 = $(top_srcdir)/doc/man/man3
-directory1 = $(top_srcdir)/doc/man/man1
-directoryinfo = $(top_srcdir)/doc
-prefix3 = logic_analyzer
 info_TEXINFOS = logic_analyzer.texi
-man_MANS = $(directory1)/$(prefix3).1
-MAINTAINERCLEANFILES = logic_analyzer.info
+man_MANS = $(top_srcdir)/doc/man/man1/logic_analyzer.1
+MAINTAINERCLEANFILES = logic_analyzer.info stamp-vti version.texi Makefile.in
+@HAVE_DOXYGEN_TRUE@directory3 = $(top_srcdir)/doc/man/man3
+@HAVE_DOXYGEN_TRUE@prefix3 = logic_analyzer
 @HAVE_DOXYGEN_TRUE@doxyman3 = activity.3 binary.3 logic_input.3 message.3 microwire.3 protocol.3 raw.3 transition.3 
 @HAVE_DOXYGEN_TRUE@dist_man_MANS = $(directory3)/$(prefix3)_activity.3  $(directory3)/$(prefix3)_binary.3 $(directory3)/$(prefix3)_logic_input.3 $(directory3)/$(prefix3)_message.3 $(directory3)/$(prefix3)_microwire.3  $(directory3)/$(prefix3)_protocol.3 $(directory3)/$(prefix3)_raw.3 $(directory3)/$(prefix3)_transition.3 
 @HAVE_DOXYGEN_TRUE@CLEANFILES = doxyfile.stamp 
