--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -206,13 +206,14 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 info_TEXINFOS = logic_analyzer.texi
 man_MANS = $(top_srcdir)/doc/man/man1/logic_analyzer.1
+doc_dir = $(top_builddir)/doc
 MAINTAINERCLEANFILES = logic_analyzer.info stamp-vti version.texi Makefile.in
 @HAVE_DOXYGEN_TRUE@directory3 = $(top_srcdir)/doc/man/man3
 @HAVE_DOXYGEN_TRUE@prefix3 = logic_analyzer
 @HAVE_DOXYGEN_TRUE@doxyman3 = activity.3 binary.3 logic_input.3 message.3 microwire.3 protocol.3 raw.3 transition.3 
 @HAVE_DOXYGEN_TRUE@dist_man_MANS = $(directory3)/$(prefix3)_activity.3  $(directory3)/$(prefix3)_binary.3 $(directory3)/$(prefix3)_logic_input.3 $(directory3)/$(prefix3)_message.3 $(directory3)/$(prefix3)_microwire.3  $(directory3)/$(prefix3)_protocol.3 $(directory3)/$(prefix3)_raw.3 $(directory3)/$(prefix3)_transition.3 
 @HAVE_DOXYGEN_TRUE@CLEANFILES = doxyfile.stamp 
-@HAVE_DOXYGEN_TRUE@DISTCLEANFILES = Doxyfile
+@HAVE_DOXYGEN_TRUE@DISTCLEANFILES = Doxyfile 
 all: all-am
 
 .SUFFIXES:
@@ -803,8 +804,10 @@ uninstall-man: uninstall-man1 uninstall-man3
 @HAVE_DOXYGEN_TRUE@	done
 
 @HAVE_DOXYGEN_TRUE@all-local: doxyfile.stamp
+
 @HAVE_DOXYGEN_TRUE@clean-doxygen:
 @HAVE_DOXYGEN_TRUE@	rm -rf $(top_srcdir)/doc/man/man3 $(top_srcdir)/doc/html $(top_srcdir)/doc/latex 
+
 @HAVE_DOXYGEN_TRUE@clean-local: clean-doxygen
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
