improved makefiles.am and configure.ac a bit add test for headers, and test.dat is distrubuted auto update version.texi when configure.ac is modified

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,8 @@ MAINTAINERCLEANFILES= Makefile.in aclocal.m4 config.guess config.sub configure d
 
 EXTRA_DIST=gen_changelog.sh
 
+dist_pkgdata_DATA = examples/test.dat
+
 clean-local:
 	rm -fr autom4te.cache
 	
