--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,8 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
+#TODO: use variables HAVE_<HEADER>_H in headers or at least inturupt configure if not found
+
 AC_PREREQ([2.69])
 AC_INIT(logic-analyzer-rpi, 0.1)
 AM_INIT_AUTOMAKE()
@@ -18,12 +20,18 @@ AC_PROG_CXX
 AC_PROG_CC
 
 # Checks for libraries.
-AC_CHECK_LIB([bcm2835],[bcm2835_init])
-AC_CHECK_LIB([mgl],[mgl_create_data])
-AC_CHECK_LIB([rt],[clock_gettime])
+AC_SEARCH_LIBS([bcm2835_init],[bcm2835])
+AC_SEARCH_LIBS([mgl_create_data],[mgl])
+AC_SEARCH_LIBS([clock_gettime],[rt])
 
 # Checks for header files.
-#AC_CHECK_HEADERS([unistd.h])
+AC_CHECK_HEADERS([bcm2835.h])
+AC_CHECK_HEADERS([stdio.h])
+AC_CHECK_HEADERS([time.h])
+#next one does not work ... why ??
+#AC_CHECK_HEADERS([mgl/mgl_zb.h])
+AC_CHECK_HEADERS([stdarg.h])
+AC_CHECK_HEADERS([getopt.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SIZE_T
