--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,3 +8,5 @@ bin_PROGRAMS = logic_analyzer
 logic_analyzer_SOURCES = logic_analyzer.cpp debug.cpp activity.cpp message.cpp transition.cpp binary.cpp logic_input.cpp microwire.cpp raw.cpp protocol.cpp debug.h activity.h message.h transition.h binary.h logic_input.h microwire.h raw.h protocol.h
 
 CLEANFILES = config.status config.log src/*.o
+
+MAINTAINERCLEANFILES = Makefile.in
